PF 13 fixes